# beni

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  dist.md  env.sh  fsdp.py  pyproject.toml  qwen.py  setup.py
api/: Makefile  chatbot.py  client.py  docker-compose.yaml  request.sh  worker.py
api/chatbot/: Dockerfile  chatbot.py
api/worker/: Dockerfile  worker.py
checkpoints/test/: config.json
deploy/: .dockerignore  Dockerfile  entrypoint.sh  test.sh
eval/: one_vision.py
scripts/: pretrain.sh  test.sh  train.sh  train_gcp.sh  zero2_offload.json
src/: .main.py.swp  Makefile  README.md  d.py  dist.md  finetuning.py  fsdp.py  hf_train.py  main.py  requirements.txt  test.py  train.py
src/checkpointing/: __init__.py  checkpoint_handler.py
src/configs/: __init__.py  fsdp.py  quantization.py  training.py  wandb.py
src/data/: __init__.py  d.py  load_recap.py  owl_cap.py  phi3visionit.py  upload_to_hf.py  utils.py
src/model/: .beni.py.swp  README.md  __init__.py  beni.py  config.py  vision.py
src/model/vision/: __init__.py  idefics2_perceiver.py  kumaraswamy.ipynb  perceiver.py  sparsity.py  vision_tower.py
src/policies/: __init__.py  activation_checkpointing_functions.py  wrapping.py
src/utils/: __init__.py  config_utils.py  train_utils.py
src/vlm/: README.md  __init__.py  _hf_main_backup.py  config.yaml  fsdp.py  hf_main.py  hf_train.py  main.py  model_config.json  train.py
src/vlm/checkpointing/: __init__.py  checkpoint_handler.py
src/vlm/configs/: training.py  (+1 more)
vertex/: .env  job_launch.py  launch_job.py  train_config.yaml
(+24 files in other folders)
